--- a/env.example
+++ b/env.example
@@ -2,7 +2,7 @@
 GEMINI_API_KEY=your-gemini-api-key-here
 
 # Required: The Gemini model to use (default: gemini-pro)
-GEMINI_MODEL=gemini-pro
+GEMINI_MODEL=gemini-2.5-flash
 
 # Optional: Logging level (default: INFO)
 LOG_LEVEL=INFO
